// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`POST /api/editors/mesures it return date_nomination error 1`] = `
Object {
  "errors": Array [
    Object {
      "location": "body",
      "msg": "date_nomination must be after or equivalent to date_premier_mesure",
      "param": "date_nomination",
      "value": "2020-01-01",
    },
  ],
}
`;

exports[`POST /api/editors/mesures it returns date_protection_en_cours error 1`] = `
Object {
  "errors": Array [
    Object {
      "location": "body",
      "msg": "date_nomination must be before or equivalent to date_protection_en_cours",
      "param": "date_nomination",
      "value": "2020-01-11",
    },
    Object {
      "location": "body",
      "msg": "champ_mesure is required",
      "param": "etats[0].champ_mesure",
    },
    Object {
      "location": "body",
      "msg": "champ_mesure is required",
      "param": "etats[1].champ_mesure",
    },
  ],
}
`;
